--- a/app/public/index.html
+++ b/app/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#243447" />
     <meta
       name="description"
       content="Mint a limited NFT drop on Solana."
@@ -23,21 +23,21 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Candy Drop</title>
-    <meta name="title" content="Candy Drop" />
+    <title>NFT Fan Zone</title>
+    <meta name="title" content="NFT Zone" />
     <meta name="description" content="Mint a limited NFT drop on Solana." />
     
     <!-- Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://buildspace.so/">
-    <meta property="og:title" content="Candy Drop">
+    <meta property="og:title" content="NFT Fan Zone">
     <meta property="og:description" content="Mint a limited NFT drop on Solana.">
     <meta property="og:image" content="https://s3.amazonaws.com/cdn.buildspace.so/courses/solana-nft/metadata.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://buildspace.so/">
-    <meta property="twitter:title" content="Candy Drop">
+    <meta property="twitter:title" content="NFT Fan Zone">
     <meta property="twitter:description" content="Mint a limited NFT drop on Solana.">
     <meta property="twitter:image"
       content="https://s3.amazonaws.com/cdn.buildspace.so/courses/solana-nft/metadata.png">
